--- a/cpp02/ex01/Makefile
+++ b/cpp02/ex01/Makefile
@@ -1,9 +1,9 @@
-NAME    := phonebook
-CXX     := c++
-CXXFLAGS:= -Wall -Wextra -Werror -std=c++98
+CXX = c++
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRCS    := main.cpp PhoneBook.cpp Contact.cpp
-OBJS    := $(SRCS:.cpp=.o)
+SRCS = Fixed.cpp main.cpp
+OBJS = $(SRCS:.cpp=.o)
+NAME = fixed_point
 
 all: $(NAME)
 
